--- a/thweets/templates/layout.html
+++ b/thweets/templates/layout.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url "tweet_list" %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -46,6 +46,17 @@
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+          
+              {% if user.is_authenticated %}
+              <form action="{% url "logout" %}" method="post">
+              {% csrf_token %}
+              <button class="btn btn-danger">Logout</button>
+            </form>
+              {% else %}
+              <a href="{% url "login" %}" class="btn btn-primary">Login</a>
+              <a href="{% url "register" %}" class="btn btn-primary">Register</a>
+              {% endif %}
+            
           </div>
         </div>
       </nav>
