--- a/thweets/templates/registration/login.html
+++ b/thweets/templates/registration/login.html
@@ -7,5 +7,5 @@
     {{form.as_p}}
     <button class="btn btn-primary">Login</button>
 </form>
-<p>Dont have an account? Register here <a href ="{% url 'register' %}"</a></p>
+<p>Dont have an account? <a href ="{% url 'register' %}">Register here </a></p>
 {% endblock %}
