--- a/thweets/tweet/templates/tweet_list.html
+++ b/thweets/tweet/templates/tweet_list.html
@@ -7,9 +7,10 @@
 
 <a class='btn btn-primary mb-2' href="{% url "tweet_create" %}">create a post</a>
 
-<div class="flex-container row gap-3 ">
+
+<div class="container row gap-5">
 {% for tweet in tweets %}
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 25rem;">
   {% if tweet.image %}
     <img src="{{tweet.image.url}}" class="card-img-top" alt="...">
   {% else %}
@@ -20,11 +21,14 @@
       <h2 class="card-title">{{tweet.title}}</h2>
       <p class="card-text">{{tweet.text}}</p>
       <p class="card-user">{{tweet.user.username}}</p>
+      {% if tweet.user == user %}
       <a href="{% url "tweet_edit" tweet.id %}" class="btn btn-primary">Edit</a>
       <a href="{% url "tweet_delete" tweet.id %}" class="btn btn-danger">Delete</a>
+      {% endif %}
     </div>
   </div>
 
 {% endfor %}
+</div>
 </div>
 {% endblock %}
